Fix gha smells:
- Use fixed version for runs-on argument
- Run tests on multiple OS's
- Avoid workflows without comments

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,10 +12,13 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    name: Build on ${{matrix.os}} with Java ${{matrix.java}}
+    runs-on: ${{matrix.os}}
     strategy:
+      fail-fast: false
       matrix:
         java: [8, 11, 17, 21]
+        os: [ubuntu-latest, windows-latest]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
