Fix sentinel-dashboard.log wrong path problems while user defined {csp.sentinel.log.dir}.

--- a/sentinel-dashboard/src/main/resources/application.properties
+++ b/sentinel-dashboard/src/main/resources/application.properties
@@ -8,7 +8,7 @@ server.servlet.session.cookie.name=sentinel_dashboard_cookie
 
 #logging settings
 logging.level.org.springframework.web=INFO
-logging.file.name=${user.home}/logs/csp/sentinel-dashboard.log
+logging.file.name=${csp.sentinel.log.dir}/sentinel-dashboard.log
 logging.pattern.file= %d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
 #logging.pattern.console= %d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
 
