--- a/sentinel-adapter/sentinel-spring-webmvc-adapter/pom.xml
+++ b/sentinel-adapter/sentinel-spring-webmvc-adapter/pom.xml
@@ -24,6 +24,10 @@
             <artifactId>sentinel-core</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.alibaba.csp</groupId>
+            <artifactId>sentinel-web-adapter-common</artifactId>
+        </dependency>
+        <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>${servlet.api.version}</version>
