--- a/sentinel-adapter/sentinel-web-adapter-common/pom.xml
+++ b/sentinel-adapter/sentinel-web-adapter-common/pom.xml
@@ -16,6 +16,14 @@
     </properties>
     <dependencies>
         <dependency>
+            <groupId>com.alibaba.csp</groupId>
+            <artifactId>sentinel-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.csp</groupId>
+            <artifactId>sentinel-parameter-flow-control</artifactId>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
