--- a/sentinel-dashboard/pom.xml
+++ b/sentinel-dashboard/pom.xml
@@ -107,8 +107,8 @@
         <dependency>
             <groupId>com.ctrip.framework.apollo</groupId>
             <artifactId>apollo-openapi</artifactId>
-            <version>1.2.0</version>
-            <scope>test</scope>
+            <version>1.8.0</version>
+            <!--<scope>test</scope>-->
         </dependency>
 
         <!--for Zookeeper rule publisher sample-->
