用nacos实现了规则的持久化

--- a/sentinel-dashboard/src/main/resources/application.properties
+++ b/sentinel-dashboard/src/main/resources/application.properties
@@ -22,3 +22,10 @@ auth.password=sentinel
 # Inject the dashboard version. It's required to enable
 # filtering in pom.xml for this resource file.
 sentinel.dashboard.version=@project.version@
+
+spring.cloud.nacos.discovery.server-addr=localhost:8848
+spring.application.name=sentinel-dashboard-service
+spring.cloud.nacos.discovery.namespace=sentinel-namespace
+spring.cloud.nacos.discovery.register-enabled=true
+spring.cloud.nacos.discovery.username:nacos
+spring.cloud.nacos.discovery.password:nacos
