--- a/sentinel-adapter/sentinel-spring-cloud-gateway-v6x-adapter/pom.xml
+++ b/sentinel-adapter/sentinel-spring-cloud-gateway-v6x-adapter/pom.xml
@@ -18,6 +18,7 @@
         <spring.cloud.gateway.version>4.3.0</spring.cloud.gateway.version>
         <spring.boot.version>3.5.0</spring.boot.version>
         <spring.version>6.2.7</spring.version>
+        <skip.spring.v6x.test>false</skip.spring.v6x.test>
     </properties>
 
     <dependencies>
@@ -78,5 +79,26 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven.surefire.version}</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.maven.surefire</groupId>
+                        <artifactId>surefire-junit47</artifactId>
+                        <version>3.2.5</version>
+                    </dependency>
+                </dependencies>
+                <configuration>
+                    <skipTests>${skip.spring.v6x.test}</skipTests>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 
 </project>
