chore: update release configuration
Change-Id: Iaf2d4c4656492b7456b94c39aa75f6b6c2eaaeb1

--- a/sentinel-adapter/sentinel-reactor-adapter/pom.xml
+++ b/sentinel-adapter/sentinel-reactor-adapter/pom.xml
@@ -10,6 +10,8 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <name>${project.groupId}:${project.artifactId}</name>
+
     <artifactId>sentinel-reactor-adapter</artifactId>
 
     <properties>
