--- a/sentinel-adapter/sentinel-zuul2-adapter/pom.xml
+++ b/sentinel-adapter/sentinel-zuul2-adapter/pom.xml
@@ -10,6 +10,8 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <name>${project.groupId}:${project.artifactId}</name>
+
     <artifactId>sentinel-zuul2-adapter</artifactId>
     <packaging>jar</packaging>
 
