--- a/sentinel-cluster/pom.xml
+++ b/sentinel-cluster/pom.xml
@@ -9,6 +9,8 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+
+    <name>${project.groupId}:${project.artifactId}</name>
     <packaging>pom</packaging>
     <artifactId>sentinel-cluster</artifactId>
     <description>The parent module of Sentinel cluster server</description>
