--- a/sentinel-demo/sentinel-demo-quarkus/pom.xml
+++ b/sentinel-demo/sentinel-demo-quarkus/pom.xml
@@ -11,6 +11,8 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <name>${project.groupId}:${project.artifactId}</name>
+
     <artifactId>sentinel-demo-quarkus</artifactId>
 
     <properties>
