--- a/sentinel-demo/sentinel-demo-slot-spi/pom.xml
+++ b/sentinel-demo/sentinel-demo-slot-spi/pom.xml
@@ -10,5 +10,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <name>${project.groupId}:${project.artifactId}</name>
+
     <artifactId>sentinel-demo-slot-spi</artifactId>
 </project>
