--- a/sentinel-transport/sentinel-transport-common/pom.xml
+++ b/sentinel-transport/sentinel-transport-common/pom.xml
@@ -9,6 +9,8 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+
+    <name>${project.groupId}:${project.artifactId}</name>
     <packaging>jar</packaging>
     <artifactId>sentinel-transport-common</artifactId>
 
