--- a/sentinel-demo/sentinel-demo-quarkus/pom.xml
+++ b/sentinel-demo/sentinel-demo-quarkus/pom.xml
@@ -4,9 +4,10 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 
     <parent>
-        <artifactId>sentinel-demo</artifactId>
         <groupId>com.alibaba.csp</groupId>
-        <version>1.8.8</version>
+        <artifactId>sentinel-demo</artifactId>
+        <version>${revision}</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
