--- a/sentinel-demo/sentinel-demo-rocketmq/pom.xml
+++ b/sentinel-demo/sentinel-demo-rocketmq/pom.xml
@@ -5,7 +5,8 @@
     <parent>
         <groupId>com.alibaba.csp</groupId>
         <artifactId>sentinel-demo</artifactId>
-        <version>1.8.8</version>
+        <version>${revision}</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
