--- a/sentinel-logging/pom.xml
+++ b/sentinel-logging/pom.xml
@@ -6,7 +6,8 @@
     <parent>
         <groupId>com.alibaba.csp</groupId>
         <artifactId>sentinel-parent</artifactId>
-        <version>1.8.8</version>
+        <version>${revision}</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>sentinel-logging</artifactId>
     <packaging>pom</packaging>
