chore: update release configuration
Change-Id: I9edbfaa22c619f18dc4fe7e4bc343841a704e357

--- a/sentinel-demo/pom.xml
+++ b/sentinel-demo/pom.xml
@@ -46,6 +46,10 @@
         <module>sentinel-demo-servlet</module>
     </modules>
 
+    <properties>
+        <central.publishing.skip>true</central.publishing.skip>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>com.alibaba.csp</groupId>
